force-app/main/default/objects/smEquipment__c/smEquipment__c.object-meta.xml
<CustomObject>
    <description>The smEquipment object is used for all assets to include Vehicles, Equipment, Locations, and Components</description>
    <label>Asset Tag</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>