force-app/main/default/objects/smEquipment__c/fields/AC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>AC_Capacity__c</fullName>
    <description>Device AC Capacity</description>
    <inlineHelpText>Device AC Capacity</inlineHelpText>
    <label>AC Capacity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>