force-app/main/default/objects/smEquipment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Tags (Account)</relationshipLabel>
    <relationshipName>Asset_Tags1</relationshipName>
    <type>Lookup</type>
</CustomField>