force-app/main/default/objects/smEquipment__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC system</fullName>
            </value>
            <value>
                <fullName>DC system</fullName>
            </value>
            <value>
                <fullName>DAS/SCADA</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Auxiliary system</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>FAA Light System</fullName>
            </value>
            <value>
                <fullName>Gearbox</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Hydraulic System</fullName>
            </value>
            <value>
                <fullName>Pitch System</fullName>
            </value>
            <value>
                <fullName>Nacelle</fullName>
            </value>
            <value>
                <fullName>Alarm System</fullName>
            </value>
            <value>
                <fullName>Rotor</fullName>
            </value>
            <value>
                <fullName>Yaw System</fullName>
            </value>
            <value>
                <fullName>Meteorological Mast</fullName>
            </value>
            <value>
                <fullName>Ice System</fullName>
            </value>
            <value>
                <fullName>Testing Equipment/Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>