force-app/main/default/objects/smEquipment__c/fields/Asset_SubClass__c.field-meta.xml
<CustomField>
    <fullName>Asset_SubClass__c</fullName>
    <label>Asset SubClass</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Asset_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Transfer Switch</fullName>
            </value>
            <value>
                <fullName>Auxiliary system</fullName>
            </value>
            <value>
                <fullName>Battery Bank</fullName>
            </value>
            <value>
                <fullName>Capacitor Bank</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Circuit</fullName>
            </value>
            <value>
                <fullName>Circuit Breaker</fullName>
            </value>
            <value>
                <fullName>Combiner Box</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Data Acquisition System</fullName>
            </value>
            <value>
                <fullName>Data logger</fullName>
            </value>
            <value>
                <fullName>Disconnect Switch</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Fossil</fullName>
            </value>
            <value>
                <fullName>Freon</fullName>
            </value>
            <value>
                <fullName>Fuse</fullName>
            </value>
            <value>
                <fullName>Generator</fullName>
            </value>
            <value>
                <fullName>Heating Ventilation and Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Inverter Block</fullName>
            </value>
            <value>
                <fullName>Inverter Module</fullName>
            </value>
            <value>
                <fullName>Inverter Pad</fullName>
            </value>
            <value>
                <fullName>IV Curve Tracer</fullName>
            </value>
            <value>
                <fullName>Junction box</fullName>
            </value>
            <value>
                <fullName>Lift Station</fullName>
            </value>
            <value>
                <fullName>Load Tap Changer</fullName>
            </value>
            <value>
                <fullName>Main Plant Transformer</fullName>
            </value>
            <value>
                <fullName>Manhole</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>