force-app/main/default/objects/smEquipment__c/fields/Commercial_Entity_account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Entity_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Entity that owns the plant from the Parent Account record</inlineHelpText>
    <label>Commercial Entity Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Tags (Commercial Entity account)</relationshipLabel>
    <relationshipName>Asset_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>