force-app/main/default/objects/smEquipment__c/fields/DC_Capacity__c.field-meta.xml
<CustomField>
    <fullName>DC_Capacity__c</fullName>
    <description>Device DC Capacity</description>
    <inlineHelpText>Device DC Capacity</inlineHelpText>
    <label>DC Capacity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>