force-app/main/default/objects/smEquipment__c/fields/DC_UOM__c.field-meta.xml
<CustomField>
    <fullName>DC_UOM__c</fullName>
    <description>DC Capacity Unit of Measure</description>
    <inlineHelpText>DC Capacity Unit of Measure</inlineHelpText>
    <label>DC UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amps</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>KVA</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>Volts</fullName>
            </value>
            <value>
                <fullName>Watts</fullName>
            </value>
            <value>
                <fullName>kWdc</fullName>
                <isActive>false</isActive>
                <label>kWdc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>