force-app/main/default/objects/smEquipment__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEC</fullName>
            </value>
            <value>
                <fullName>Bay4</fullName>
            </value>
            <value>
                <fullName>Biosar</fullName>
            </value>
            <value>
                <fullName>Blattner Energy</fullName>
            </value>
            <value>
                <fullName>Borrego Solar</fullName>
            </value>
            <value>
                <fullName>Buenavista Renewables</fullName>
            </value>
            <value>
                <fullName>CalCom</fullName>
            </value>
            <value>
                <fullName>Carolina Solar Services, LLC</fullName>
            </value>
            <value>
                <fullName>CCR</fullName>
            </value>
            <value>
                <fullName>CED OpCo</fullName>
            </value>
            <value>
                <fullName>Coldwell Solar</fullName>
            </value>
            <value>
                <fullName>Coles Electric</fullName>
            </value>
            <value>
                <fullName>Cupertino Electric</fullName>
            </value>
            <value>
                <fullName>Depcom</fullName>
            </value>
            <value>
                <fullName>DynaSolar</fullName>
            </value>
            <value>
                <fullName>E.ON</fullName>
            </value>
            <value>
                <fullName>Ecoplexus, Inc</fullName>
            </value>
            <value>
                <fullName>EDF</fullName>
            </value>
            <value>
                <fullName>Elecnor</fullName>
            </value>
            <value>
                <fullName>Enerparc</fullName>
            </value>
            <value>
                <fullName>ESA Renewables, LLC</fullName>
            </value>
            <value>
                <fullName>EV-Assurance Power Systems</fullName>
            </value>
            <value>
                <fullName>EV-Besco</fullName>
            </value>
            <value>
                <fullName>EV-Electrical Power and Controls</fullName>
            </value>
            <value>
                <fullName>EV-FSGI</fullName>
            </value>
            <value>
                <fullName>EV-Gervais Electric</fullName>
            </value>
            <value>
                <fullName>EV-JNS Power and Control Systems</fullName>
            </value>
            <value>
                <fullName>EV-K&amp;R Construction Specialties, Inc</fullName>
            </value>
            <value>
                <fullName>EV-Kenmor Electric</fullName>
            </value>
            <value>
                <fullName>EV-Maximum Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>