force-app/main/default/objects/smEquipment__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>smEquipment__c</referenceTo>
    <relationshipLabel>Asset Tags</relationshipLabel>
    <relationshipName>Asset_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>