force-app/main/default/objects/smEquipment__c/fields/Parent_Description__c.field-meta.xml
<CustomField>
    <fullName>Parent_Description__c</fullName>
    <formula>Parent__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Description</label>
    <type>Text</type>
</CustomField>