force-app/main/default/objects/smEquipment__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>smEquipment__c</referenceTo>
    <relationshipLabel>Asset Tags (Plant)</relationshipLabel>
    <relationshipName>Asset_Tags1</relationshipName>
    <type>Lookup</type>
</CustomField>