force-app/main/default/objects/smEquipment__c/fields/Plant_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Plant_Business_Segment__c</fullName>
    <inlineHelpText>Select Business Unit for the Plant from the picklist</inlineHelpText>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BESS</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>Resi</fullName>
            </value>
            <value>
                <fullName>ROC-Not Monitored</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>WWS Construction</fullName>
            </value>
            <value>
                <fullName>WWS Solar</fullName>
            </value>
            <value>
                <fullName>WWS Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>